--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <hr>
     <ul>
         <li><a href="https://www.neit.edu/">New England Tech</a></li>
-        <li><a href="../index.html">This is relative Link</a></li>
+        <li><a href="../index.html"> a link that head to the other pages, that will be added in soon</a></li>
     </ul>
 <body>
 </body>
