--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Week 1 Assignment: Bio part 1</h1>
     <hr>
     <h2>Bio Stephen Danyla</h2>
-    <img src="images/picofme.jpg" alt="picture of me">
+    <img src="Images/picofme.jpg" alt="picture of me">
     <p>I ain't good with bio's but here goes nothing my name is Stephen Danyla, I'm 18 and a Rhode Islander. Though I'd much prefer to be livin 
         in the south, but much to my dismay the best program for video game develpement happens to be in the north. Nevertheless continuing on, 
         since this pandemic hit I don't do much anymore. Before this pandemic I would hang with friends and whatnot, I enjoy playing video games
@@ -26,7 +26,7 @@
         on more important things in my major rather than pointless other subjects like humanities.<p>
     <hr>
     <h2>Schools</h2>
-    <img src="images/NewEnglandTech.jpg" alt="picture of school">
+    <img src="Images/NewEnglandTech.jpg" alt="picture of school">
     <ol>
         <li>New England Tech</li>
         <li>Barrington HighSchool</li>
@@ -34,7 +34,7 @@
     </ol>
     <hr>
     <h2>Hobbies</h2>
-    <img src="images/ffxv.png" alt="picture of hobbies">
+    <img src="Images/ffxv.png" alt="picture of hobbies">
     <ul>
         <li>Video Games</li>
         <li>Golf </li>
